add default styling for GlueStack library

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gluestack-style/react": "^1.0.48",
+    "@gluestack-ui/config": "^1.1.16",
     "@gluestack-ui/themed": "^1.1.9",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
