--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/config": "^1.1.16",
     "@gluestack-ui/themed": "^1.1.9",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/react-native": "^0.73.0",
     "react": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "0.73.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-storage": "^1.0.1",
     "react-native-svg": "^13.4.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
